[gd_scene format=3 uid="uid://d2purte7x74wp"]

[ext_resource type="Script" uid="uid://ceg7uogn7q53o" path="res://scripts/main_menu.gd" id="1_m4ki5"]
[ext_resource type="Texture2D" uid="uid://ceseidlrku7my" path="res://resources/images/main_menu/Title-Background.png" id="2_srphr"]
[ext_resource type="Texture2D" uid="uid://cnkihol71load" path="res://resources/images/main_menu/logo.png" id="3_lpb7j"]
[ext_resource type="Texture2D" uid="uid://b1ddrq1sqlcv" path="res://resources/images/main_menu/Start.png" id="4_64s5s"]
[ext_resource type="Texture2D" uid="uid://cprefmjsn5w40" path="res://resources/images/main_menu/Options.png" id="5_h52vu"]
[ext_resource type="Texture2D" uid="uid://dqmw5tdux8dyt" path="res://resources/images/main_menu/return.png" id="6_jnu17"]

[node name="MainMenu" type="Control" unique_id=338512690]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4ki5")

[node name="Background" type="TextureRect" parent="." unique_id=666901434]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 371.0
offset_top = 36.0
offset_right = -368.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_srphr")
expand_mode = 1
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="." unique_id=390251558]
custom_minimum_size = Vector2(480, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -243.0
offset_top = 106.0
offset_right = 237.0
offset_bottom = 298.0
grow_horizontal = 2
texture = ExtResource("3_lpb7j")
expand_mode = 1
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1355029343]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -24.0
offset_right = 172.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=378673059]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=331316424]
custom_minimum_size = Vector2(344, 72)
layout_mode = 2
texture_normal = ExtResource("4_64s5s")
ignore_texture_size = true
stretch_mode = 5

[node name="OptionsButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=903604802]
custom_minimum_size = Vector2(344, 72)
layout_mode = 2
texture_normal = ExtResource("5_h52vu")
ignore_texture_size = true
stretch_mode = 5

[node name="ReturnButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=1053349442]
custom_minimum_size = Vector2(344, 72)
layout_mode = 2
texture_normal = ExtResource("6_jnu17")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
